Bug 192535 - Digikam collections on removable media are treated as local collections
Summary: Digikam collections on removable media are treated as local collections
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Setup-Collections (other bugs)
Version First Reported In: 0.10.0
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-13 06:10 UTC by Todd
Modified: 2017-08-09 20:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Todd 2009-05-13 06:10:11 UTC
Version:            (using KDE 4.2.85)
Installed from:    SuSE RPMs

When I try to add a folder on a removable USB hard drive to my collection, Digikam always says "this collections is located on your harddisk" and places it is in the "local collections" area instead of the "collections on removable media" section.  I've tried it on a couple of different USB drives, the results are all the same.
Comment 1 caulier.gilles 2009-05-13 06:23:23 UTC
Reproducible here... Sound like relevant of Solid component. Marcel ?

Gilles Caulier
Comment 2 Marcel Wiesweg 2009-05-13 18:56:50 UTC
Yes I need to test this. I think there are other reports as well.
Comment 3 Vincent Panel 2009-07-05 01:50:50 UTC
Bug also happens on Mandriva 2009.1
Comment 4 Vincent Panel 2009-07-05 03:54:39 UTC
BTW, any workaround to this problem ? Many digikam users own an external USB drive...
Comment 5 caulier.gilles 2009-07-05 08:35:08 UTC
I recommend to test with current implementation of digiKam from svn (1.0.0-beta2)

Also, using KDE 4.3-rc can help here, because KDE4::Solid interface is used at this place.

I'm not sure if Marcel has already fixed code in digiKam. Anyway, only digiKam from trunk will be fixed.

Gilles Caulier
Comment 6 Marcel Wiesweg 2009-07-09 10:47:24 UTC
SVN commit 993646 by mwiesweg:

Sorry just a trailing-slash mismatch.

BUG: 192535

 M  +3 -1      NEWS  
 M  +2 -1      libs/database/collectionmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=993646