Sorry just a trailing-slash mismatch.

BUG: 192535

svn path=/trunk/extragear/graphics/digikam/; revision=993646